--- a/package.json
+++ b/package.json
@@ -56,9 +56,11 @@
     "json-loader": "^0.5.4",
     "less": "^2.5.3",
     "less-loader": "^2.2.2",
+    "malihu-custom-scrollbar-plugin": "^3.1.5",
     "merge": "^1.2.0",
     "ng-annotate": "^1.2.1",
     "ng-lodash": "^0.2.3",
+    "ng-scrollbars": "0.0.11",
     "ngstorage": "^0.3.11",
     "node-sass": "^3.4.2",
     "npm": "^3.3.10",
