--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "angular-restmod": "^1.1.11",
     "angular-ui-bootstrap": "^1.1.0",
     "angular-ui-router": "1.0.0-beta.1",
+    "angular-ui-router-anim-in-out": "^1.0.2",
     "angularjs-toaster": "^1.0.0",
     "api-check": "^7.5.5",
     "autoprefixer": "^6.3.6",
